--- a/omstd.bib
+++ b/omstd.bib
@@ -300,7 +300,7 @@
   
   @Article{Abbott_Leeuwen_Strotmann_98,
     author = {John A. Abbott and Andr{\'e} van Leeuwen and Andreas Strotmann},
-    title = {\OM: Communicating Mathematical Information        between Co-operating Agents in a Knowledge Network},
+    title = {{OpenMath}: Communicating Mathematical Information        between Co-operating Agents in a Knowledge Network},
     year = {1998},
     url= {http://www.brunel.ac.uk/~hssrjis/issue/index8.html},
     volume = {3/4},
@@ -366,7 +366,7 @@
   
   @Misc{Abbott_Dalmas_Dewar_Diaz_Gray_Sheridan_Strotmann_Vorkoetter_96,
     author = {J. Abbott and S. Dalmas and M. Dewar and A. Diaz and S. Gray and S. Sheridan and A. Strotmann and S. Vorkoetter},
-    title = {Report of the \OM Communications Committee},
+    title = {Report of the {OpenMath} Communications Committee},
     year = {1995},
   }
   
@@ -475,8 +475,8 @@
   }
   
   @Misc{PolyMath_JAVA,
-    author = {PolyMath \OM Development Team},
-    title = {Java \OM Library: Version 0.7c},
+    author = {PolyMath {OpenMath} Development Team},
+    title = {Java {OpenMath} Library: Version 0.7c},
     url= {http://pdg.cecm.sfu.ca/openmath/},
     year = {1999},
   }
@@ -490,13 +490,13 @@
   
   
   @Misc{OMurl,
-    author = {\OM Society Website},
+    author = {{OpenMath} Society Website},
     title = {www.openmath.org},
   }
   
   @InProceedings{Dalmas_Gaetano_Watt_97,
     author = {S. Dalmas and M. Ga{\"e}tano and S. Watt},
-    title = {An \OM~1.0 Implementation},
+    title = {An {OpenMath}~1.0 Implementation},
     pages = {241 - 248},
     booktitle = {Proceedings of ISSAC 97},
     year = {1997},
@@ -504,30 +504,30 @@
   }
   
   @Misc{OM_96,
-    author = {\OM Steering Committee},
-    title = {\OM Version 1.0 released},
+    author = {{OpenMath} Steering Committee},
+    title = {{OpenMath} Version 1.0 released},
     year = {1996},
     url= {http://www.openmath.org},
   }
   
   @Misc{OM_98,
-    author = {\OM Consortium},
-    title = {\OM Version 1 - Draft},
+    author = {{OpenMath} Consortium},
+    title = {{OpenMath} Version 1 - Draft},
     year = {1998},
     url = {ftp://ftp-sop.inria.fr/safir/OM/v1.ps}
   }
   
    @misc{OM_1.1,
-    author = {\OM Consortium},
-    title = {\OM Version 1.1},
+    author = {{OpenMath} Consortium},
+    title = {{OpenMath} Version 1.1},
     year = {2002},
     url= {http://www.openmath.org/standard/om11/},
   }
   
   
    @misc{OM_primer,
-    author = {\OM Consortium},
-    title = {\OM Primer},
+    author = {{OpenMath} Consortium},
+    title = {{OpenMath} Primer},
     year = {2004},
     url= {http://www.openmath.org/standard/primer/},
   }
@@ -537,8 +537,8 @@
   
   @Misc{Gonnet_Seppala_Watt_96,
     author = {G. Gonnet and M. Seppala and S. Watt},
-    title = {Semantic Dictionaries for \OM},
-    note = {Presented at the 6th \OM Workshop, Z{\"u}rich},
+    title = {Semantic Dictionaries for {OpenMath}},
+    note = {Presented at the 6th {OpenMath} Workshop, Z{\"u}rich},
     year = {1996},
     url= {http://www.inf.ethz.ch/personal/gonnet/ContDict.html},
   }
@@ -555,7 +555,7 @@
   
   @Misc{Caprotti_Cohen_Elbers_Geuvers_98,
     author = {O. Caprotti and A. M. Cohen and H. Elbers and H. Geuvers},
-    title = {Connecting \OM to Formal Math},
+    title = {Connecting {OpenMath} to Formal Math},
     booktitle = {Calculemus and Types '98},
     year = {1998},
   }
@@ -653,7 +653,7 @@
   
   @Misc{OM_D122,
     author = {S. Buswell and S. Dalmas and J. Davenport},
-    title = {\OM task 1.2: Emerging Technologies},
+    title = {{OpenMath} task 1.2: Emerging Technologies},
     year = {1998},
   }
   
@@ -673,24 +673,24 @@
   }
   
   @Misc{OM_D131a,
-    author = {\OM Consortium},
-    title = {The \OM Standard},
+    author = {{OpenMath} Consortium},
+    title = {The {OpenMath} Standard},
     year = {1998},
     url= {http://www.nag.co.uk/projects/OpenMath.html},
   }
   
   @Misc{OM_D132c,
     author = {J. Davenport},
-    title = {A Small \OM Type System},
+    title = {A Small {OpenMath} Type System},
     year = {1999},
     url= {http://www.openmath.org/standard/sts.pdf},
   }
   
   
   @TechReport{OMD132a,
-    author = {The \OM Consortium},
-    title = {The \OM Standard},
-    publisher = {\OM Esprit Consortium},
+    author = {The {OpenMath} Consortium},
+    title = {The {OpenMath} Standard},
+    publisher = {{OpenMath} Esprit Consortium},
     year = {1999},
     number = {1.3.2a},
     url= {http://www.nag.co.uk/projects/OpenMath.html},
@@ -699,16 +699,16 @@
   
   @TechReport{OMD132b,
     author = {Olga Caprotti and Arjeh M. Cohen},
-    title = {A Type System for \OM},
-    publisher = {\OM Esprit Consortium},
+    title = {A Type System for {OpenMath}},
+    publisher = {{OpenMath} Esprit Consortium},
     year = {1999},
     url= {http://www.openmath.org/standard/ecc.pdf},
   }
   
   @TechReport{OM_D133b,
     author = {Olga Caprotti and Arjeh M. Cohen},
-    title = {Development of Strong \OM},
-    publisher = {\OM Esprit Consortium},
+    title = {Development of Strong {OpenMath}},
+    publisher = {{OpenMath} Esprit Consortium},
     year = {1999},
     url= {http://www.nag.co.uk/projects/OpenMath.html},
     year = {October},
@@ -725,7 +725,7 @@
   
   @Misc{CaprottiCohen99,
     author = {Olga Caprotti and Arjeh M. Cohen},
-    title = {Integrating Computational and Deduction Systems Using \OM},
+    title = {Integrating Computational and Deduction Systems Using {OpenMath}},
     booktitle = {Calculemus'99: Systems for Integrated Computation and Deduction},
     year = {1999},
     address = {Trento, Italy},
@@ -919,7 +919,7 @@
   
   @Misc{Linton_Solomon_99,
     author = {Steve Linton and Andrew Solomon},
-    title = {GAP, \OM, and MCP},
+    title = {GAP, {OpenMath}, and MCP},
     tooktitle = {ISSAC Workshop: Internet Accessible Mathematical Computation},
     year = {99},
   }
@@ -934,8 +934,8 @@
   
   @TechReport{Harvey_99context,
     author = {Vilya Harvey},
-    title = {\OM in Context},
-    publisher = {\OM Esprit Consortium},
+    title = {{OpenMath} in Context},
+    publisher = {{OpenMath} Esprit Consortium},
     year = {1999},
     url= {http://www.nag.co.uk/projects/OpenMath/papers/context.pdf},
   }
@@ -992,8 +992,8 @@
   
   @InProceedings{Kohlhase_99,
     author = {M. Kohlhase},
-    title = {\OM for knowledge-based automated theorem proving},
-    booktitle = {Electronic Proceedings of the 12th \OM Workshop},
+    title = {{OpenMath} for knowledge-based automated theorem proving},
+    booktitle = {Electronic Proceedings of the 12th {OpenMath} Workshop},
     year = {1999},
     address = {Eindhoven, Netherlands},
     url= {http://www.riaca.win.tue.nl/projects/OpenMath/workshop},
@@ -1001,8 +1001,8 @@
   
   @Misc{Cohen_Kohlhase_99om,
     author = {Arjeh Cohen and Michael Kohlhase},
-    title = {Proposal of an Extension to \OM by Defining       Mathematical Properties},
-    booktitle = {12th \OM Workshop},
+    title = {Proposal of an Extension to {OpenMath} by Defining       Mathematical Properties},
+    booktitle = {12th {OpenMath} Workshop},
     year = {1999},
     url= {http://www.win.tue.nl/~amc/kohlhase.dvi},
   }
@@ -1010,7 +1010,7 @@
   
   @Misc{Caprotti_99CFCa,
     author = {Olga Caprotti},
-    title = {\OM: Accessing and Using Mathematical Information Electronically},
+    title = {{OpenMath}: Accessing and Using Mathematical Information Electronically},
     note = {CFC meeting talk},
     year = {1999},
     note = {Slide presentation available at http://www.riaca.win.tue.nl/~olga/om/CFCom.ps},
@@ -1018,7 +1018,7 @@
   
   @Misc{Caprotti_99CFCb,
     author = {Olga Caprotti},
-    title = {\OM and COQ: Communicating Certified Mathematical Content},
+    title = {{OpenMath} and COQ: Communicating Certified Mathematical Content},
     note = {CFC meeting talk},
     year = {1999},
     url= {http://www.riaca.win.tue.nl/~olga/om/cfcCOCOM.ps},
@@ -1026,7 +1026,7 @@
   
   @Misc{Caprotti_99imacs,
     author = {Olga Caprotti},
-    title = {Interfacing CA and Proof Checkers with \OM},
+    title = {Interfacing CA and Proof Checkers with {OpenMath}},
     booktitle = {IMACA-ACA 99},
     year = {1999},
   }
@@ -1034,7 +1034,7 @@
   
   @Article{Caprotti_Carlisle_99,
     author = {Olga Caprotti and David Carlisle},
-    title = {\OM and MathML: Semantic Mark Up for Mathematics},
+    title = {{OpenMath} and MathML: Semantic Mark Up for Mathematics},
     journal = {Crossroad},
     year = {1999},
     volume = {Special Issue on Markup Languages},
@@ -1043,7 +1043,7 @@
   
   @InProceedings{Caprotti_Cohen_99calc,
     author = {Olga Caprotti and Arjeh Cohen},
-    title = {Integrating Computational and Deduction Systems Using \OM},
+    title = {Integrating Computational and Deduction Systems Using {OpenMath}},
     booktitle = {Proceedings of Calculemus 99},
     year = {1999},
     address = {Trento},
@@ -1051,7 +1051,7 @@
   
   @InProceedings{Caprotti_Cohen_99iamc,
     author = {Olga Caprotti and Arjeh Cohen},
-    title = {Interactive Mathematics with Strong \OM},
+    title = {Interactive Mathematics with Strong {OpenMath}},
     booktitle = {Internet Accessible Mathematical Computation},
     year = {1999},
     address = {Vancouver, Canada},
@@ -1059,13 +1059,13 @@
   }
   
   @Misc{url_OMsem99,
-    title = {Seminar on \OM for Industry},
+    title = {Seminar on {OpenMath} for Industry},
     url= {http://www.riaca.win.tue.nl/projects/OpenMath/convention.html},
     year = {1999},
   }
   
   @Misc{url_OMworkshop12,
-    title = {12th  \OM Workshop},
+    title = {12th  {OpenMath} Workshop},
     url= {http://www.riaca.win.tue.nl/projects/OpenMath/workshop/},
     year = {1999},
   }
