--- a/omstd.bib
+++ b/omstd.bib
@@ -1,5 +1,5 @@
 @Book{POSIX,
-  ALTauthor = 	 {IEEE and The Open Group},
+  author = 	 {IEEE and The Open Group},
   title = 	 {Std 1003.1, 2003 Edition, The Open Group Base Specifications Issue 6 },
   year = 	 {2003},
   url = {http://www.unix.org/version3/ieee_std.html}
