--- a/encodings.tex
+++ b/encodings.tex
@@ -573,7 +573,7 @@ decoding and simplicity (to allow a simple specification and easy implementation
 
 \subsection{A Grammar for the Binary Encoding}\label{sec_binary_grammar}
 
-\def\abyte{[\_]}\def\fourbytes{\ensuremath{\{\_\}}}
+\def\abyte{[\_]\xspace}\def\fourbytes{\ensuremath{\{\_\}}\xspace}
 \begin{figure}\centering\footnotesize
 \begin{center}
 \begin{tabular}{lcp{6cm}lcp{5cm}}
