--- a/omstd20.tex
+++ b/omstd20.tex
@@ -1,5 +1,6 @@
 \documentclass{report}
 \usepackage{xspace}
+\usepackage{url}
 \usepackage{listings}
 \lstset{language=XML,columns=fullflexible,basicstyle=\sf}
 \usepackage{paralist}
@@ -7,7 +8,7 @@
 \usepackage{a4wide}
 % \usepackage[style=alphabetic,backend=bibtex]{biblatex}
 % \addbibresource{omstd.bib}
-\makeatletter\def\blx@maxline{77}\makeatother
+%\makeatletter\def\blx@maxline{77}\makeatother
 
 \def\textquote#1{``#1''}
 
